tests/gateway-api/gateway.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: gateway-infra
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway
  namespace: gateway-infra
spec:
  gatewayClassName: cloud-provider-kind
  listeners:
  - name: default
    hostname: "rizky.local"
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
